# object-surface-exploration

./: .gitignore  CMakeLists.txt  README.md  UML-diagram.xmi  keyboardControl.thrift  robotControl.thrift  robotControl_thrift.cmake
app/: CMakeLists.txt
app/applications/: objectSurfaceExploration.xml
app/contexts/: icubLeft.ini  icubRight.ini  simLeft.ini  simRight.ini
context/: surfaceExplorationContext.ini
contexts/: icubLeft.ini  icubRight.ini  objectExplorationConfig.ini  simLeft.ini  simRight.ini  surfaceExplorationContext.xml  surfaceExplorationDataCollection.xml
include/: approachObject.h  approachObjectManual.h  contactSafetyThread.h  explorationStrategyThread.h  exploreGPSurfaceThread.h  exploreObject.h  finger.h  fingerFactory.h  gpExplorationMultifinger.h  gpExplorationThread.h  gridExplorationThread.h  hand.h  icubFinger.h  linearExplorationThread.h  maintainContactThread.h  objectClassifierThread.h  objectFeatures.h  objectFeaturesThread.h  objectModelGrid.h  pidController.h  planarExplorationThread.h  robotControl.h  robotControlServer.h  simFinger.h  surfaceModelGP.h  surfaceModelGPActive.h  surfacemodelgp.h  tappingExplorationThread.h  tappingExplorationthread.h
latentRep/: VAE for iCub Surface Reconstruction.ipynb  W0.npy  W1.npy  W2.npy  b0.npy  b1.npy  b2.npy  mean.npy  std.npy  vae.py
matlab-object-surface-exloration-simulation/: activeSurfaceModelGP.m  displayModelActive.m
matlab-object-surface-exloration-simulation/@surfaceModelActiveGP/: binContacts.m  getGPUncertainty.m  plotResults.m
matlab-object-surface-exloration-simulation/@surfaceModelPassiveGP/: surfaceModelPassiveGP.m
matlab-object-surface-exloration-simulation/@surfaceModelRandom/: evaluateRMSE.m  initRefSurf.m  plotNextLocation.m  updateModel.m
matlab-scripts/: displayModelActive.m
matlabScripts/: activeSurfaceModelGP.m  displayModel.m  displayModelActive.m  myObject.m  simSurfExp.m  simulateFromServer.m  simulateSurfaceReconstruction.m  surfaceModelGP.m
matlabScripts/@surfaceModelActiveGP/: getSpatialUncertainty.m  spatialUncertainty.m  surfaceModelActiveGP.m  updateModel.m
matlabScripts/@surfaceModelPassiveGP/: getSurfaceUncertaintyGP.m  surfaceModelPassiveGP.m  updateInputTesting.m  updateModel.m
matlabScripts/@surfaceModelRandom/: addPaddingPoints.m  addPaddingPointsCorners.m  evaluateRMSE.m  generateCornerPoints.m  getMesh.m  plotMesh.m  plotMeshAll.m  plotResults.m  reEvaluateRMSE.m  surfaceModelRandom.m  updateModel.m
src/: approachObject.cpp  approachObjectManual.cpp  contactSafetyThread.cpp  exploreGPSurfaceThread.cpp  exploreObject.cpp  finger.cpp  gpExplorationMultifinger.cpp  gpExplorationThread.cpp  gridExplorationThread.cpp  hand.cpp  icubFinger.cpp  main.cpp  main.cpp~  maintainContactThread.cpp  objectFeaturesThread.cpp  objectModelGrid.cpp  pidController.cpp  planarExplorationThread.cpp  robotControl.cpp  robotControlServer.cpp  simFinger.cpp  surfaceModelGP.cpp  surfaceModelGPActive.cpp  surfacemodelgp.cpp  tappingExplorationThread.cpp  tappingExplorationthread.cpp
